# minecraft-like

./: AGENTS.md  Cargo.toml  ROADMAP.md
app/: Cargo.toml
app/src/: app.rs  engine.rs  input.rs  main.rs
core/: Cargo.toml
core/src/: budget.rs  camera.rs  config.rs  coords.rs  item.rs  lib.rs  metrics.rs
render/: Cargo.toml
render/src/: camera.rs  crosshair.wgsl  gpu.rs  item_mesh.rs  item_model.rs  lib.rs  mesh.rs  renderer.rs  shader.wgsl  types.rs
sim/: Cargo.toml
sim/src/: lib.rs  physics.rs  player.rs  simulation.rs
world/: Cargo.toml
world/src/: chunk.rs  generator.rs  lib.rs  manager.rs  region.rs  state.rs  visibility.rs  voxel.rs
