[package]
name = "voxel-render"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck.workspace = true
glam.workspace = true
profiling.workspace = true
rustc-hash.workspace = true
serde.workspace = true
tracing.workspace = true
voxel-core = { path = "../core" }
voxel-world = { path = "../world" }
wgpu.workspace = true
winit.workspace = true
glyphon.workspace = true

[dev-dependencies]
