[package]
name = "voxel-world"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec.workspace = true
bincode.workspace = true
glam.workspace = true
lz4_flex.workspace = true
noise.workspace = true
parking_lot.workspace = true
profiling.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde.workspace = true
smallvec.workspace = true
tracing.workspace = true
voxel-core = { path = "../core" }
